--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,19 +2,21 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= content_for?(:title) ? yield(:title) : "Thomas Hall Jr" %></title>
-    <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "Thomas Hall Jr" %>">
+    <title><%= content_for?(:title) ? yield(:title) : "Thomas Hall Jr." %></title>
+    <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "Thomas Hall Jr." %>">
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => 'reload' %>
     <%= csrf_meta_tags %>
   </head>
   <body>
-    <header>
-      <%= render 'layouts/navigation' %>
-    </header>
-    <main role="main">
-       <%= render 'layouts/messages' %>
-       <%= yield %>
+
+    <%= render "layouts/navigation" %>
+
+    <!-- Begin page content -->
+    <main role="main" class="container">
+      <%= yield %>
     </main>
+
+    <!-- <%= render "layouts/footer" %> -->
   </body>
 </html>
