--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -11,7 +11,7 @@
           <%= link_to 'Portfolio', pages_portfolio_path, class: 'nav-link' %>
         </li>
         <li class="nav-item active">
-          <%= link_to "Resume", "https://drive.google.com/open?id=1JP8k619YpRHOSWOhgH5nq1-8cE2iq4IOuZ1VOOdPUZ0", class: "nav-link", target: :_blank %>
+          <%= link_to "Resume", resume_path, class: "nav-link", target: :_blank %>
         </li>
         <li class="nav-item active">
           <%= link_to "Contact Me", "mailto:thomashalljunior@gmail.com", class: "nav-link" %>
