--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -8,7 +8,10 @@
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <%= link_to 'Portfolio', portfolio_path, class: 'nav-link' %>
+          <%= link_to "Blog", blog_path, class: "nav-link" %>
+        </li>
+        <li class="nav-item active">
+          <%= link_to "Portfolio", portfolio_path, class: "nav-link" %>
         </li>
         <li class="nav-item active">
           <%= link_to "Resume", resume_path, class: "nav-link", target: :_blank %>
