--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,8 @@
       <%= yield %>
     </main>
 
+    <%= debug(params) if Rails.env.development? %>
+
     <!-- <%= render "layouts/footer" %> -->
   </body>
 </html>
