Add users controller

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -4,18 +4,4 @@
   <%= link_to "Create new article", new_article_path %>
 </p>
 
-<table>
-  <tr>
-    <th>Title</th>
-    <th>Description</th>
-  </tr>
-  <% @articles.each do |a| %>
-    <tr>
-      <td><%= a.title %></td>
-      <td><%= a.body  %></td>
-      <td><%= link_to "Edit", edit_article_path(a) %></td>
-      <td><%= link_to "Show", article_path(a) %></td>
-      <td><%= link_to "Delete", article_path(a), method: :delete, data: {confirm: "Are you sure?"} %></td>
-    </tr>
-  <% end %>
-</table>
+<%= render "articles", obj: @articles %>
