--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -5,6 +5,9 @@
 <p>
   Description: <%= @article.body %>
 </p>
+<small>Created by: <%= @article.user.username if @article.user %>,
+<%= time_ago_in_words(@article.created_at) %> ago,
+last updated: <%= time_ago_in_words(@article.updated_at) %> ago</small>
 <p>
   <%= link_to "Back", articles_path %>
 </p>
