Add sessions controller

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,5 +1,9 @@
 <h1 class="mt-5">Listing all articles</h1>
 
+<div align="center">
+ <%= will_paginate %>
+</div>
+
 <p>
   <%= link_to "Create new article", new_article_path %>
 </p>
