--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,4 +1,19 @@
 <h1 class="mt-5">Showing selected article</h1>
+
+<% if @article.user %>
+
+<ul class="listing">
+  <div class="row" align="center">
+   <div class="col-md-4 col-md-offset-4">
+    <li><%= link_to gravatar_for(@article.user), user_path(@article.user) %></li>
+    <li class="article-title"><%= link_to @article.user.username, user_path(@article.user) %></li>
+    <li><small><%= pluralize(@article.user.articles.count, "article") if @article.user.articles %></small></li>
+   </div>
+  </div>
+ </ul>
+
+<% end %>
+
 <p>
   Title: <%= @article.title %>
 </p>
