--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -19,6 +19,11 @@
         <li class="nav-item active">
           <%= link_to "Contact Me", "mailto:thomashalljunior@gmail.com", class: "nav-link" %>
         </li>
+        <% if logged_in? %>
+        <li><%= link_to "Log out", logout_path, method: :delete %></li>
+        <% else %>
+        <li><%= link_to "Log in", login_path %></li>
+        <% end %>
       </ul>
     </div>
   </nav>
