Clean up code, add proper spacing, indentation

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,8 +1,6 @@
-<h1 class="mt-5">Listing all articles</h1>
+<h1 class="mt-5">Blog</h1>
 
-<div align="center">
- <%= will_paginate %>
-</div>
+<%= will_paginate %>
 
 <p>
   <%= link_to "Create new article", new_article_path %>
