--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -19,10 +19,12 @@
         <li class="nav-item active">
           <%= link_to "Contact Me", "mailto:thomashalljunior@gmail.com", class: "nav-link" %>
         </li>
-        <% if logged_in? %>
-        <li><%= link_to "Log out", logout_path, method: :delete %></li>
-        <% else %>
-        <li><%= link_to "Log in", login_path %></li>
+        <% if Rails.env.development? %>
+          <% if logged_in? %>
+            <li class="nav-item active"><%= link_to "Log out", logout_path, method: :delete, class: "nav-link" %></li>
+          <% else %>
+            <li class="nav-item active"><%= link_to "Log in", login_path, class: "nav-link" %></li>
+          <% end %>
         <% end %>
       </ul>
     </div>
