--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <%= render "layouts/navigation" %>
 
     <!-- Begin page content -->
-    <main role="main" class="container">
+    <main role="main">
       <% flash.each do |name, msg| %>
         <ul>
           <li><%= msg %></li>
