--- a/app/views/articles/_articles.html.erb
+++ b/app/views/articles/_articles.html.erb
@@ -7,9 +7,11 @@
     <tr>
       <td><%= a.title %></td>
       <td><%= a.body  %></td>
-      <td><%= link_to "Edit", edit_article_path(a) %></td>
-      <td><%= link_to "Show", article_path(a) %></td>
-      <td><%= link_to "Delete", article_path(a), method: :delete, data: { confirm: "Are you sure?" } %></td>
+      <% if logged_in? %>
+        <td><%= link_to "Edit", edit_article_path(a) %></td>
+        <td><%= link_to "Show", article_path(a) %></td>
+        <td><%= link_to "Delete", article_path(a), method: :delete, data: { confirm: "Are you sure?" } %></td>
+      <% end %>
     </tr>
   <% end %>
 </table>
