--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,30 +1,30 @@
 <%= render "shared/errors", obj: @article %>
 
-<div class="row">
-  <div class="col-xs-12">
-    <%= form_for(@article, :html => {class: "form-horizontal", role: "form"}) do |f| %>
-      <div class="form-group">
-        <div class="control-label col-sm-2">
-          <%= f.label :title %>
-        </div>
-        <div class="col-sm-6">
-          <%= f.text_field :title, class: "form-control", placeholder: "Title of article", autofocus: true %>
-        </div>
-      </div>
-      <div class="form-group">
-        <div class="control-label col-sm-2">
-          <%= f.label :body %>
-        </div>
-        <div class="col-sm-6">
-          <%= f.text_area :body, rows: 10, class: "form-control", placeholder: "Body of article" %>
-        </div>
-      </div>
-      <div class="form-group">
-        <div class="col-sm-offset-2 col-sm-10">
-          <%= f.submit class: "btn btn-primary btn-large" %>
-        </div>
-      </div>
-    <% end %>
-    <%= link_to "Back", articles_path %>
+<%= form_for(@article, :html => {class: "form-horizontal", role: "form"}) do |f| %>
+  <div class="row pt-3">
+    <div class="control-label col-md-2 text-right">
+      <%= f.label :title %>
+    </div>
+    <div class="col-md-10">
+      <%= f.text_field :title, class: "form-control", placeholder: "Title of blog post", autofocus: true %>
+    </div>
+  </div>
+  <div class="row pt-3">
+    <div class="control-label col-md-2 text-right">
+      <%= f.label :body %>
+    </div>
+    <div class="col-md-10">
+      <%= f.text_area :body, rows: 10, class: "form-control", placeholder: "Body of blog post" %>
+    </div>
+  </div>
+  <div class="row pt-3">
+    <div class="offset-md-2 col-md-10">
+      <%= f.submit class: "btn btn-primary btn-large" %>
+    </div>
+  </div>
+<% end %>
+<div class="row pt-3">
+  <div class="col-md-12">
+    <%= link_to "Back to all blog posts", articles_path %>
   </div>
 </div>
