--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,17 +1,19 @@
 <h1 align="center">Welcome to <%= @user.username %>'s page</h1>
+
 <div class="row">
- <div class="col-md-4 col-md-offset-4 center">
-  <%= gravatar_for @user, size: 150 %>
- </div>
+  <div class="col-md-4 col-md-offset-4 center">
+    <%= gravatar_for @user, size: 150 %>
+  </div>
 </div>
+
 <h4 align="center"><%= @user.username %>'s articles</h4>
 
 <div class="center">
- <%= will_paginate @user_articles %>
+  <%= will_paginate @user_articles %>
 </div>
 
-<%= render 'articles/articles', obj: @user.articles %>
+<%= render "articles/articles", obj: @user.articles %>
 
 <div class="center">
- <%= will_paginate @user_articles %>
+  <%= will_paginate @user_articles %>
 </div>
