--- a/app/views/articles/_articles.html.erb
+++ b/app/views/articles/_articles.html.erb
@@ -1,17 +1,19 @@
-<table>
-  <tr>
-    <th>Title</th>
-    <th>Description</th>
-  </tr>
-  <% obj.each do |a| %>
-    <tr>
-      <td><%= a.title %></td>
-      <td><%= a.body  %></td>
-      <% if logged_in? %>
-        <td><%= link_to "Edit", edit_article_path(a) %></td>
-        <td><%= link_to "Show", article_path(a) %></td>
-        <td><%= link_to "Delete", article_path(a), method: :delete, data: { confirm: "Are you sure?" } %></td>
-      <% end %>
-    </tr>
+<% obj.each do |a| %>
+  <div class="row mt-4">
+    <div class="col-md-12">
+      <%= link_to a.title, article_path(a) %>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-12">
+      <%= a.body.truncate(125) %>
+    </div>
+  </div>
+  <% if logged_in? %>
+  <div class="row">
+    <div class="col-md-12">
+      <%= link_to "Edit", edit_article_path(a) %> <%= link_to "Show", article_path(a) %> <%= link_to "Delete", article_path(a), method: :delete, data: { confirm: "Are you sure?" } %>
+    </div>
+  </div>
   <% end %>
-</table>
+<% end %>
