--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -2,18 +2,18 @@
 
 <%= form_for(@article, :html => {class: "form-horizontal", role: "form"}) do |f| %>
   <div class="row pt-3">
-    <div class="control-label col-md-2 text-right">
+    <div class="control-label col-md-1">
       <%= f.label :title %>
     </div>
-    <div class="col-md-10">
+    <div class="col-md-11">
       <%= f.text_field :title, class: "form-control", placeholder: "Title of blog post", autofocus: true %>
     </div>
   </div>
   <div class="row pt-3">
-    <div class="control-label col-md-2 text-right">
+    <div class="control-label col-md-1">
       <%= f.label :body %>
     </div>
-    <div class="col-md-10">
+    <div class="col-md-11">
       <%= f.text_area :body, rows: 10, class: "form-control", placeholder: "Body of blog post" %>
     </div>
   </div>
