--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -6,7 +6,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarCollapse">
-      <ul class="navbar-nav mr-auto">
+      <ul class="nav navbar-nav mr-auto">
         <li class="nav-item active">
           <%= link_to "Blog", blog_path, class: "nav-link" %>
         </li>
@@ -19,6 +19,8 @@
         <li class="nav-item active">
           <%= link_to "Contact Me", "mailto:thomashalljunior@gmail.com", class: "nav-link" %>
         </li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
         <% if Rails.env.development? %>
           <% if logged_in? %>
             <li class="nav-item active"><%= link_to "Log out", logout_path, method: :delete, class: "nav-link" %></li>
