--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,3 +1,13 @@
-<h1 class="mt-5">Software Developer, Ocean Photographer</h1>
-<p class="lead">Junior Ruby on Rails developer with a passion for learning. Studied computer science at Hawaii Pacific University. In his spare time, Thomas Hall Jr. enjoys surfing and digital ocean photography.</p>
-<p><%= image_tag("thomas-hall-jr.jpg", class: "thomashalljr-pic") %></p>
+<h1 class="mt-5 mb-3 text-center">Software Developer, Ocean Photographer</h1>
+
+<div class="row justify-content-md-center mb-4">
+  <div class="col-md-6 lead">
+    Junior Ruby on Rails developer with a passion for learning. Studied computer science at Hawaii Pacific University. In his spare time, Thomas Hall Jr. enjoys surfing and digital ocean photography.
+  </div>
+</div>
+
+<div class="row justify-content-md-center">
+  <div class="col-md-3">
+    <%= image_tag("thomas-hall-jr.jpg", class: "thomashalljr-pic") %>
+  </div>
+</div>
