--- a/app/views/pages/portfolio.html.erb
+++ b/app/views/pages/portfolio.html.erb
@@ -1,7 +1,7 @@
-<h1 class="mt-5">Portfolio</h1>
+<h1 class="mt-5 text-center">Portfolio</h1>
 
 <div class="album py-5">
-  <div class="row">
+  <div class="row justify-content-md-center">
     <div class="col-md-4">
       <%= link_to "https://thomashalljr-myrecipes.herokuapp.com/signup", target: :_blank do %>
         <div class="card mb-4 box-shadow">
