--- a/app/views/articles/_articles.html.erb
+++ b/app/views/articles/_articles.html.erb
@@ -1,17 +1,17 @@
 <% obj.each do |a| %>
-  <div class="row mt-4">
-    <div class="col-md-12">
+  <div class="row mt-4 justify-content-md-center">
+    <div class="col-md-9">
       <%= link_to a.title, article_path(a) %>
     </div>
   </div>
-  <div class="row">
-    <div class="col-md-12">
+  <div class="row justify-content-md-center">
+    <div class="col-md-9">
       <%= a.body.truncate(125) %>
     </div>
   </div>
   <% if logged_in? %>
-  <div class="row">
-    <div class="col-md-12">
+  <div class="row justify-content-md-center">
+    <div class="col-md-9">
       <%= link_to "Edit", edit_article_path(a) %> <%= link_to "Show", article_path(a) %> <%= link_to "Delete", article_path(a), method: :delete, data: { confirm: "Are you sure?" } %>
     </div>
   </div>
