Display gravatar as circle

--- a/app/assets/stylesheets/1st_load_framework.css.scss
+++ b/app/assets/stylesheets/1st_load_framework.css.scss
@@ -8,6 +8,10 @@ img {
   margin: 0 auto;
 }
 
+.img-circle {
+  border-radius: 50%;
+}
+
 // THESE ARE EXAMPLES YOU CAN MODIFY
 // create your own classes
 // to make views framework-neutral
