--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,29 +1,35 @@
-<h1 class="mt-5">Showing selected article</h1>
+<h1 class="mt-5 mb-4 text-center"><%= @article.title %></h1>
 
 <% if @article.user %>
-  <ul class="listing">
-    <div class="row" align="center">
-      <div class="col-md-4 col-md-offset-4">
-        <li><%= link_to gravatar_for(@article.user), user_path(@article.user) %></li>
-        <li class="article-title"><%= link_to @article.user.username, user_path(@article.user) %></li>
-        <li><small><%= pluralize(@article.user.articles.count, "article") if @article.user.articles %></small></li>
+    <div class="row text-center">
+      <div class="col-md-12">
+        <ul class="listing">
+          <li><%= link_to gravatar_for(@article.user), user_path(@article.user) %></li>
+          <li class="article-title"><%= link_to @article.user.username, user_path(@article.user) %></li>
+          <li><small><%= pluralize(@article.user.articles.count, "article") if @article.user.articles %></small></li>
+        </ul>
       </div>
     </div>
-  </ul>
 <% end %>
 
-<p>
-  Title: <%= @article.title %>
-</p>
-<p>
-  Description: <%= simple_format(@article.body) %>
-</p>
-<small>Created by: <%= @article.user.username if @article.user %>,
-<%= time_ago_in_words(@article.created_at) %> ago,
-last updated: <%= time_ago_in_words(@article.updated_at) %> ago</small>
-<p>
-  <%= link_to "Back", articles_path %>
-</p>
-<p>
-  <%= link_to "Edit", edit_article_path(@article) %>
-</p>
+<div class="row justify-content-md-center">
+  <div class="col-md-9">
+    <%= simple_format(@article.body) %>
+  </div>
+</div>
+
+<div class="row justify-content-md-center">
+  <div class="col-md-9">
+    <small>Created by: <%= @article.user.username if @article.user %>,
+    <%= time_ago_in_words(@article.created_at) %> ago,
+    last updated: <%= time_ago_in_words(@article.updated_at) %> ago</small>
+  </div>
+</div>
+
+<% if logged_in? %>
+  <div class="row justify-content-md-center mt-2">
+    <div class="col-md-9">
+      <%= link_to "Edit", edit_article_path(@article) %>
+    </div>
+  </div>
+<% end %>
