--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,19 +1,13 @@
-<h1 align="center">Welcome to <%= @user.username %>'s page</h1>
+<h1 class="mt-5 mb-4 text-center">Welcome to <%= @user.username %>'s page</h1>
 
-<div class="row">
-  <div class="col-md-4 col-md-offset-4 center">
+<div class="row text-center">
+  <div class="col-md-12">
     <%= gravatar_for @user, size: 150 %>
   </div>
 </div>
 
-<h4 align="center"><%= @user.username %>'s articles</h4>
+<h4 class="text-center mt-2"><%= @user.username %>'s articles</h4>
 
-<div class="center">
-  <%= will_paginate @user_articles %>
-</div>
+<%= will_paginate @user_articles, list_classes: %w(pagination justify-content-center my-4) %>
 
-<%= render "articles/articles", obj: @user.articles %>
-
-<div class="center">
-  <%= will_paginate @user_articles %>
-</div>
+<%= render "articles/articles", obj: @user_articles %>
