Update MyRecipes URL in portfolio page

--- a/app/views/pages/portfolio.html.erb
+++ b/app/views/pages/portfolio.html.erb
@@ -3,7 +3,7 @@
 <div class="album py-5">
   <div class="row justify-content-md-center">
     <div class="col-md-4">
-      <%= link_to "https://thomashalljr-myrecipes.herokuapp.com/signup", target: :_blank do %>
+      <%= link_to "https://thomashalljr-myrecipes.herokuapp.com/", target: :_blank do %>
         <div class="card mb-4 box-shadow">
           <%= image_tag("myrecipes-screenshot.jpg", class: "card-img-top") %>
           <div class="card-body">
