--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -7,9 +7,9 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="nav navbar-nav mr-auto">
-        <!-- <li class="nav-item active"> -->
-          <%# <%= link_to "Blog", blog_path, class: "nav-link" %>
-        <!-- </li> -->
+        <li class="nav-item active">
+          <%= link_to "Blog", blog_path, class: "nav-link" %>
+        </li>
         <li class="nav-item active">
           <%= link_to "Portfolio", portfolio_path, class: "nav-link" %>
         </li>
