--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -14,7 +14,7 @@
 
 <div class="row justify-content-md-center">
   <div class="col-md-9">
-    <%= simple_format(@article.body) %>
+    <%= simple_format(@article.body, {class: "article"}, sanitize: false) %>
   </div>
 </div>
 
