Add margin above heading

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,6 @@
+<h1 class="mt-5 text-center">All Users</h1>
+
 <div align="center">
-  <h1 align="center">All Users</h1>
   <%= will_paginate %>
   <% @users.each do |user| %>
     <ul class="listing">
