--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,19 +12,17 @@
 
     <%= render "layouts/navigation" %>
 
+    <% flash.each do |name, msg| %>
+      <div class="<%= flash_class(name) %>">
+        <%= msg %>
+      </div>
+    <% end %>
+
     <!-- Begin page content -->
     <main role="main">
-      <% flash.each do |name, msg| %>
-        <ul>
-          <li><%= msg %></li>
-        </ul>
-      <% end %>
-
       <%= yield %>
     </main>
 
-    <%# <%= debug(params) if Rails.env.development? %>
-
-    <!-- <%= render "layouts/footer" %> -->
+    <%# render "layouts/footer" %>
   </body>
 </html>
