Add MyMusic JavaScript app to portfolio

--- a/app/views/pages/portfolio.html.erb
+++ b/app/views/pages/portfolio.html.erb
@@ -13,6 +13,16 @@
       <% end %>
     </div>
     <div class="col-md-4">
+      <%= link_to "https://enjoymymusic.herokuapp.com/", target: :_blank do %>
+        <div class="card mb-4 box-shadow">
+          <%= image_tag("mymusic-screenshot.jpg", class: "card-img-top") %>
+          <div class="card-body">
+            <p class="card-text">MyMusic: JavaScript app</p>
+          </div>
+        </div>
+      <% end %>
+    </div>
+    <div class="col-md-4">
       <%= link_to "https://github.com/thomashalljr", target: :_blank do %>
         <div class="card mb-4 box-shadow">
           <%= image_tag("github-logo.jpg", class: "card-img-top") %>
