Add Tomodoro Timer to portfolio

--- a/app/views/pages/portfolio.html.erb
+++ b/app/views/pages/portfolio.html.erb
@@ -23,6 +23,18 @@
       <% end %>
     </div>
     <div class="col-md-4">
+      <%= link_to "https://tomodorotimer.herokuapp.com/", target: :_blank do %>
+        <div class="card mb-4 box-shadow">
+          <%= image_tag("tomodoro-timer-screenshot.jpg", class: "card-img-top") %>
+          <div class="card-body">
+            <p class="card-text">Tomodoro Timer: React app</p>
+          </div>
+        </div>
+      <% end %>
+    </div>
+  </div>
+  <div class="row justify-content-md-center">
+    <div class="col-md-4">
       <%= link_to "https://github.com/thomashalljr", target: :_blank do %>
         <div class="card mb-4 box-shadow">
           <%= image_tag("github-logo.jpg", class: "card-img-top") %>
