--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -1,9 +1,9 @@
 <%# Rails flash messages styled for Bootstrap 4.0 %>
-<% flash.each do |name, msg| %>
-  <% if msg.is_a?(String) %>
-    <div class="alert alert-<%= name.to_s == 'notice' ? 'success' : 'danger' %>" role="alert">
+<% flash.each do |type, message| %>
+  <% if message.is_a?(String) %>
+    <div class="<%= flash_type_to_bootstrap_classes(type) %>" role="alert">
       <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-      <%= content_tag :div, msg, :id => "flash_#{name}" %>
+      <%= content_tag :div, message, :id => "flash_#{type}" %>
     </div>
   <% end %>
 <% end %>
