--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,18 +11,12 @@
   <body>
 
     <%= render "layouts/navigation" %>
-
-    <% flash.each do |name, msg| %>
-      <div class="<%= flash_class(name) %>">
-        <%= msg %>
-      </div>
-    <% end %>
+    <%= render "layouts/messages" %>
 
     <!-- Begin page content -->
     <main role="main">
       <%= yield %>
     </main>
 
-    <%# render "layouts/footer" %>
   </body>
 </html>
