--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -2,6 +2,12 @@
 // Do not use *= require in Sass or your other stylesheets will not be able to access the Bootstrap mixins and variables.
 @import "bootstrap";
 
+p {
+  font-size: 1.05rem;
+  margin-bottom: 1.25rem;
+  line-height: 1.7rem;
+}
+
 // make all images responsive by default
 img {
   @extend .img-fluid;
@@ -53,6 +59,7 @@ html {
 body {
   /* Margin bottom by footer height */
   margin-bottom: 60px;
+  color: #333;
 }
 .footer {
   position: absolute;
