Remove unnecessary things from rails_apps_composer

--- a/app/views/shared/_errors.html.erb
+++ b/app/views/shared/_errors.html.erb
@@ -2,15 +2,16 @@
   <div class="row">
     <div class="col-md-8 col-md-offset-2">
       <div class="card text-white bg-danger mb-3">
-        <div class="card-header"><%= pluralize(obj.errors.count, "error") %>
-        prohibited this <%= obj.class %> from being saved:</div>
-          <div class="card-body">
-              <ul class="card-text">
-                <% obj.errors.full_messages.each do |msg| %>
-                  <li><%= msg %></li>
-                <% end %>
-              </ul>
-          </div>
+        <div class="card-header">
+          <%= pluralize(obj.errors.count, "error") %>
+          prohibited this <%= obj.class %> from being saved:
+        </div>
+        <div class="card-body">
+          <ul class="card-text">
+            <% obj.errors.full_messages.each do |msg| %>
+              <li><%= msg %></li>
+            <% end %>
+          </ul>
         </div>
       </div>
     </div>
