--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,15 +1,15 @@
 <h1 class="mt-5 mb-4 text-center"><%= @article.title %></h1>
 
 <% if @article.user %>
-    <div class="row text-center">
-      <div class="col-md-12">
-        <ul class="listing">
-          <li><%= link_to gravatar_for(@article.user), user_path(@article.user) %></li>
-          <li class="article-title"><%= link_to @article.user.username, user_path(@article.user) %></li>
-          <li><small><%= pluralize(@article.user.articles.count, "article") if @article.user.articles %></small></li>
-        </ul>
-      </div>
+  <div class="row text-center">
+    <div class="col-md-12">
+      <ul class="listing">
+        <li><%= link_to gravatar_for(@article.user), user_path(@article.user) %></li>
+        <li class="article-title"><%= link_to @article.user.username, user_path(@article.user) %></li>
+        <li><small><%= pluralize(@article.user.articles.count, "article") if @article.user.articles %></small></li>
+      </ul>
     </div>
+  </div>
 <% end %>
 
 <div class="row justify-content-md-center">
@@ -20,9 +20,11 @@
 
 <div class="row justify-content-md-center">
   <div class="col-md-9">
-    <small>Created by: <%= @article.user.username if @article.user %>,
-    <%= time_ago_in_words(@article.created_at) %> ago,
-    last updated: <%= time_ago_in_words(@article.updated_at) %> ago</small>
+    <small>
+      Created by: <%= @article.user.username if @article.user %>,
+      <%= time_ago_in_words(@article.created_at) %> ago,
+      last updated: <%= time_ago_in_words(@article.updated_at) %> ago
+    </small>
   </div>
 </div>
 
